--- a/aistudio.html
+++ b/aistudio.html
@@ -107,6 +107,19 @@
   <div class="container showcase__grid">
 
     <header class="section__header showcase__text">
+      <!-- Hero media (imagem acima do título) -->
+<div class="hero-media">
+  <img
+    class="hero-media__img"
+    src="assets/img/SUA-IMAGEM.png"
+    alt="Tullu AI Studio em funcionamento"
+    loading="lazy"
+    decoding="async"
+  />
+</div>
+
+<h1>A IA atende. O CRM organiza.<br/>Você ganha tempo.</h1>
+
       <h2 class="section__title">
         A IA atende. O CRM organiza. Você ganha tempo.
       </h2>
