Update image source in hero media section

--- a/aistudio.html
+++ b/aistudio.html
@@ -111,7 +111,7 @@
 <div class="hero-media">
   <img
     class="hero-media__img"
-    src="assets/img/SUA-IMAGEM.png"
+    src="assets/img/mockups.png"
     alt="Tullu AI Studio em funcionamento"
     loading="lazy"
     decoding="async"
