--- a/aistudio.html
+++ b/aistudio.html
@@ -115,11 +115,9 @@
     alt="Tullu AI Studio em funcionamento"
     loading="lazy"
     decoding="async"
+    style="width:550px;"
   />
 </div>
-
-<h1>A IA atende. O CRM organiza.<br/>Você ganha tempo.</h1>
-
       <h2 class="section__title">
         A IA atende. O CRM organiza. Você ganha tempo.
       </h2>
